# workshop-dw

./: .user.yml  README.md  pyproject.toml
src/: extract_load.py
